--- a/login.html
+++ b/login.html
@@ -3,144 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Admin Login - Tutormee</title>
+    <title>Admin Login - TutorMe</title>
     <style>
-        :root {
-            --sociology: #e7b718;
-            --psychology: #a259d9;
-            --chemistry: #38b000;
-            --biology: #00b4d8;
-            --physics: #4361ee;
-            --header: #fff;
-            --text: #222;
-            --accent: #f72585;
+        body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; }
+        .header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
-        body {
-            font-family: 'Segoe UI', Arial, sans-serif;
-            margin: 0; padding: 0;
-            background: #f8f9fa;
-            color: var(--text);
+        .header .logo {
+            font-size: 1.8em;
+            font-weight: bold;
         }
-        header {
-            background: linear-gradient(90deg, var(--sociology), var(--psychology), var(--chemistry), var(--biology), var(--physics));
-            color: var(--header);
-            text-align: center;
-            padding: 2rem 1rem 1rem 1rem;
-        }
-        .website-link {
-            margin-top: 0.5rem;
-            font-size: 1.1rem;
-        }
-        .website-link a {
-            color: var(--header);
-            text-decoration: underline;
-        }
-        nav {
-            background: var(--header);
-            box-shadow: 0 2px 8px #0001;
-            padding: 1rem;
-            text-align: center;
-        }
-        nav a {
-            margin: 0 1rem;
-            color: var(--accent);
+        .header nav a {
+            color: white;
             text-decoration: none;
-            font-weight: bold;
-            transition: color 0.2s;
+            margin-left: 20px;
         }
-        nav a:hover {
-            color: var(--physics);
+        .login-page {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 70px);
         }
-        .container {
-            max-width: 400px;
-            margin: 2.5rem auto;
-            background: #fff;
-            padding: 2rem 1.5rem;
-            border-radius: 16px;
-            box-shadow: 0 2px 12px #0002;
-        }
-        h2 { color: var(--accent); text-align: center; margin-bottom: 30px; }
-        label {
-            display: block;
-            margin-top: 1rem;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-        input {
-            width: 100%;
-            padding: 0.8rem;
+        .login-container {
+            background: white;
+            padding: 40px;
             border-radius: 8px;
-            border: 1px solid #ccc;
-            font-size: 1rem;
-        }
-        button {
-            background: var(--accent);
-            color: #fff;
-            padding: 1rem 2rem;
-            border-radius: 40px;
-            text-decoration: none;
-            font-weight: bold;
-            margin-top: 1.5rem;
-            display: block;
-            width: 100%;
-            border: none;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: background 0.2s;
-        }
-        button:hover {
-            background: var(--physics);
-        }
-        .msg {
             text-align: center;
-            margin-top: 1rem;
-            color: var(--accent);
-            font-weight: bold;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        footer {
-            background: var(--accent);
-            color: #fff;
-            text-align: center;
-            padding: 1.5rem 1rem 1rem 1rem;
-            margin-top: 2rem;
-            font-size: 1.1rem;
-        }
-        footer a {
-            color: #fff;
-            text-decoration: underline;
-        }
+        input { display: block; margin-bottom: 15px; padding: 12px; width: 250px; border: 1px solid #ccc; border-radius: 5px; }
+        button { padding: 12px; width: 100%; background-color: #3498db; color: white; cursor: pointer; border: none; border-radius: 5px; font-size: 1em; }
+        button:hover { background-color: #2980b9; }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Tutormee</h1>
-        <p>Specialist online tutoring for A-Level & GCSE</p>
-        <div class="website-link">
-            Visit us: <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>
-        </div>
+
+    <!-- Consistent header for all pages -->
+    <header class="header">
+        <div class="logo">TutorMe</div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="bookings.html">Bookings</a>
+            <a href="videos.html">Videos</a>
+            <a href="login.html">Admin Login</a>
+        </nav>
     </header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="Our-services.html">Our Services</a>
-        <a href="bookings.html">Bookings</a>
-        <a href="videos.html">Videos</a>
-        <a href="login.html">Admin Login</a>
-    </nav>
-    <div class="container">
-        <h2>Admin Login</h2>
-        <form id="login-form">
-            <label for="email">Email</label>
-            <input type="email" id="email" required>
-            <label for="password">Password</label>
-            <input type="password" id="password" required>
-            <button type="submit">Login</button>
-        </form>
-        <div class="msg" id="msg"></div>
+
+    <div class="login-page">
+        <div class="login-container">
+            <h2>Admin Login</h2>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button onclick="login()">Login</button>
+        </div>
     </div>
-    <footer>
-        &copy; 2025 Tutormee | <a href="https://www.Tutormee.co.uk" target="_blank">www.Tutormee.co.uk</a>. All rights reserved.
-    </footer>
 
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
@@ -150,9 +71,9 @@
         // Your web app's Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyAfOf2vN2YzPUAO6kfz4HSu8HYkK8TWZHY",
-            authDomain: "Tutormee-99ca8.firebaseapp.com",
-            projectId: "Tutormee-99ca8",
-            storageBucket: "Tutormee-99ca8.appspot.com",
+            authDomain: "tutorme-99ca8.firebaseapp.com",
+            projectId: "tutorme-99ca8",
+            storageBucket: "tutorme-99ca8.appspot.com",
             messagingSenderId: "1012080798952",
             appId: "1:1012080798952:web:e9067e9a68bb1841e72d5d"
         };
@@ -161,24 +82,18 @@
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
-        document.getElementById('login-form').addEventListener('submit', function(event) {
-            event.preventDefault();
+        function login() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-            const msgDiv = document.getElementById('msg');
-            msgDiv.innerText = ''; // Clear previous messages
-
             auth.signInWithEmailAndPassword(email, password)
                 .then((userCredential) => {
-                    // Login was successful.
-                    // No admin check is performed. Redirect directly to the dashboard.
                     window.location.href = 'dashboard.html';
                 })
                 .catch((error) => {
-                    // Handle errors like wrong password, user not found, etc.
-                    msgDiv.innerText = error.message;
+                    alert(error.message);
                 });
-        });
+        }
     </script>
+
 </body>
 </html>
